--- a/my-app/src/components/navBar.css
+++ b/my-app/src/components/navBar.css
@@ -1,23 +1,35 @@
 .Navbar{
+    display: grid;
+    grid-template-columns: 10% 10% 80%;
+    grid-template-rows: 100%;
+    grid-template-areas: "logo items cart";
+    margin-top: 1em;
+}
+
+/* 
+.Navbar{
     display: flex;
     flex-direction: row;
-    background-color: black;
+    background-color: rgb(193, 187, 187);
     color: white;
     padding: 1em;
     width: 100%;
     align-items: center;
     height: 5em;
-}
+} */
 
 .logoNavbar{
+    grid-area: logo;
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 img{
     width: 2.5vw;
 }
 ul{
+    grid-area: items;
     display: flex;
     flex-direction: row;
     
@@ -28,3 +40,11 @@ li{
     list-style: none;
 }
 
+.CartWidget{
+    grid-area: cart;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 2em;
+    margin-bottom: 4em;    
+    
+}
